# google-search-console-mcp

./: .gitignore  .npmignore  README-NODEJS.md  README.md  gsc_dimensions.json  gsc_filters.json  gsc_mcp_server.py  gsc_metrics.json  pyproject.toml  requirements.txt  server.js  test-mcp-connection.js  test-simple-mcp.js
gsc_mcp/: __init__.py
