[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-search-console-mcp"
version = "0.1.0"
description = "Connect Google Search Console data to Claude, Cursor and other MCP clients. Query your website's search performance data in natural language."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Surendran Balachandran", email = "surendran.balachandran@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=0.4.0",
    "google-auth-httplib2>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/surendranb/google-search-console-mcp"
Repository = "https://github.com/surendranb/google-search-console-mcp.git"
Issues = "https://github.com/surendranb/google-search-console-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["gsc_mcp_server"]
